force-app/main/default/objects/Celigo_Settings__mdt/Celigo_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Celigo integration webhook</description>
    <label>Celigo Settings</label>
    <pluralLabel>Celigo Settings</pluralLabel>
</CustomObject>