force-app/main/default/objects/Celigo_Settings__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Celigo webhook endpoint URL</description>
    <label>Endpoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>