force-app/main/default/objects/Celigo_Settings__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for Celigo API authentication</description>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>